--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <!-- Cabecera -->
     <header>
-        <img src="https://cdn.pixabay.com/photo/2013/04/01/09/18/document-98478_960_720.png" alt="Logo" class="logo">
-        <h1>Mi Página Web</h1>
+        <img src="pngtree-3d-grand-piano-object-png-image_10159434.png" alt="Logo" class="logo">
+        <h1>Paula Domínguez</h1>
     </header>
 
     <div class="container">
@@ -19,7 +19,7 @@
         <nav class="sidebar">
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Sobre Nosotros</a></li>
+                <li><a href="#">Sobre mí</a></li>
                 <li><a href="#">Servicios</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
@@ -27,7 +27,7 @@
 
         <!-- Contenido Principal -->
         <main class="main-content">
-            <h2>Bienvenido a Nuestra Web</h2>
+            <h2>Bienvenido a mi Web</h2>
             <p>
                 Esta es una estructura básica de una página web con una cabecera, un menú lateral y una sección principal de contenido.
             </p>
